--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                 always {
                     script {
                         // Archive the test results for Jenkins to pick up
-                        junit 'target/surefire-reports/*.xml'
+                    junit allowEmptyResults: true, testResults: 'target/surefire-reports/*.xml'
                     }
                 }
             }
