--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
                     //sh 'mvn clean compile'
                     
                     // Run the tests
-                    sh 'mvn test'
+                    bat 'mvn test'
                 }
             }
             
