--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
 
                     // Run the tests
                     bat 'mvn test'
+                    currentBuild.result = 'UNSTABLE'
                 }
             }
             post {
