--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,9 @@ pipeline {
                 always {
                     script {
                         // Archive the test results for Jenkins to pick up
+                        error('Build set to UNSTABLE due to failed tests')
                         currentBuild.result = 'UNSTABLE'
+                        
                         junit allowEmptyResults: true, testResults: 'target/surefire-reports/*.xml'
                     }
                 }
