--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,8 @@ pipeline {
                 always {
                     script {
                         // Archive the test results for Jenkins to pick up
-                        junit allowEmptyResults: true, testResults: 'target/surefire-reports/*.xml'
+                       // junit allowEmptyResults: true, testResults: 'target/surefire-reports/*.xml'
+                        testNG(reportFilenamePattern: '**/target/surefire-reports/*.xml')
                     }
                 }
             }
